--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-starter-kit",
-  "description": "A React starter template with TypeScript, testing, and all the good stuff",
+  "description": "A React starter template with TypeScript, testing, and all the good stuff. Auto-versioned and production-ready.",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -17,7 +17,11 @@
     "test:coverage": "vitest --coverage",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "prepare": "husky"
+    "prepare": "husky",
+    "version:patch": "npm version patch && git push && git push --tags",
+    "version:minor": "npm version minor && git push && git push --tags",
+    "version:major": "npm version major && git push && git push --tags",
+    "release": "npm run build && npm run test -- --run && npm run test:e2e -- --reporter=dot && npm run version:patch"
   },
   "dependencies": {
     "@apollo/client": "^3.13.9",
