refactor: humanize content and remove casual language
- Update README with professional tone and clear structure
- Standardize error messages in TodoForm component
- Replace casual phrases with formal language throughout
- Improve documentation clarity and consistency
- Update test expectations to match new error messages
- Fix project structure formatting in README

All content now uses professional technical writing style.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-starter-kit",
-  "description": "A React starter template with TypeScript, testing, and all the good stuff. Auto-versioned and production-ready.",
+  "description": "A modern React starter template with TypeScript, testing, and developer tools configured.",
   "private": true,
   "version": "1.0.1",
   "type": "module",
