--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint --apply .",
+    "format": "biome format --write .",
+    "format:check": "biome format .",
+    "check": "biome check .",
+    "check:fix": "biome check --write .",
+    "analyze": "vite-bundle-analyzer",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -25,14 +28,18 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.9",
+    "@hookform/resolvers": "^5.2.1",
     "graphql": "^16.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.8.0",
     "styled-components": "^6.1.19",
+    "zod": "^4.0.15",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.1.4",
     "@eslint/js": "^9.32.0",
     "@playwright/test": "^1.54.2",
     "@testing-library/jest-dom": "^6.6.4",
@@ -63,15 +70,13 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.1.0",
-    "vitest": "^3.2.4"
+    "vite-bundle-analyzer": "^1.2.0",
+    "vitest": "^3.2.4",
+    "web-vitals": "^5.1.0"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,css,md}": [
-      "prettier --write"
+    "*.{js,jsx,ts,tsx,json,css,md}": [
+      "biome check --write"
     ]
   }
 }
