--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "version": "1.0.1",
   "type": "module",
+  "packageManager": "pnpm@9.7.0",
+  "engines": {
+    "node": ">=22.12.0",
+    "pnpm": ">=9.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
