docs: rewrite README with human voice and personality
- Replace corporate/AI tone with conversational developer voice
- Add honest opinions and real-world context
- Remove marketing buzzwords and overly structured formatting
- Include practical advice and relatable pain points
- Make it sound like a developer sharing their actual starter kit
- Keep it informative but approachable and authentic

Also fix lint-staged to exclude Markdown from Biome processing

--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "web-vitals": "^5.1.0"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,css,md}": [
+    "*.{js,jsx,ts,tsx,json,css}": [
       "biome check --write"
     ]
   }
