--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "format:check": "biome format .",
     "check": "biome check .",
     "check:fix": "biome check --write .",
-    "analyze": "vite-bundle-analyzer",
+    "analyze": "npx vite-bundle-analyzer",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -59,6 +59,7 @@
     "@typescript-eslint/parser": "^8.39.0",
     "@vitejs/plugin-react": "^4.7.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "3.2.4",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsx-a11y": "^6.10.2",
